<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="transition_signup"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/signup_back_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="login"
                android:padding="5dp"
                android:src="@drawable/general_back_icon"
                android:transitionName="transition_back_arrow_btn" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_black_border"
                android:fontFamily="@font/antic"
                android:gravity="center"
                android:padding="5dp"
                android:text="1/2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="transition_slide_text" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="304dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="47dp"
                android:fontFamily="@font/bungee"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_firstname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                android:textColorHint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:textColorHint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:onClick="firstRegister"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:transitionName="transition_next_btn" />

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:elevation="5dp"
            android:fontFamily="@font/antic"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn" />


    </LinearLayout>


</ScrollView>